fixed wordwrap in matches screen

--- a/client/app/pages/matches/matches.component.css
+++ b/client/app/pages/matches/matches.component.css
@@ -9,3 +9,11 @@
 #matches > .column > .segment {
     height: 100%;
 }
+
+thead {
+    height: 5.3em !important;
+}
+
+tbody {
+    height: calc(100% - 5.3em) !important;
+}
